Simplified event publishing on startup and added comments about necessary startup requirements. Removed unnecessary POM dependencies